--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,3 +7,4 @@
 @import "blocks/benefit.scss";
 @import "blocks/slider.scss";
 @import "blocks/products.scss";
+@import "blocks/form__catalog.scss";
