--- a/src/scss/blocks/form__catalog.scss
+++ b/src/scss/blocks/form__catalog.scss
@@ -14,7 +14,7 @@
 		height: 480px;
 		bottom: 0;
 		right: 0;
-		background-image: url(/img/form/bg_img.png);
+		background-image: url(../img/form/bg_img.png);
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
