--- a/src/scss/blocks/btn.scss
+++ b/src/scss/blocks/btn.scss
@@ -24,8 +24,8 @@
 }
 .btn--orange{
 	color: white;
-	background: linear-gradient(to bottom, #f7a747 0%, #e28413 100%);
-	box-shadow: 0px 5px 10px 0px #99692e;
+	background: linear-gradient(to bottom, #f7a748 0%, #e28413 100%);
+	box-shadow: 0px 3px 9px 0 #ae4e0e;
 }
 .btn--light-green{
 	color: black;
@@ -43,4 +43,9 @@
 	font-size: 12px;
 	font-weight: 500;
 	text-transform: uppercase;
+}
+.btn--form{
+	height: 60px;
+	width: 100%;
+	max-width: 370px;
 }
