--- a/src/scss/blocks/form__catalog.scss
+++ b/src/scss/blocks/form__catalog.scss
@@ -4,8 +4,8 @@
 	color: white;
 }
 .form__wrapper{
-	position: relative;
 	height: 355px;
+	padding: 80px 100px 0;
 	background-color: #cf3d5a;
 	&::before{
 		content: '';
@@ -18,5 +18,41 @@
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
+	}
+}
+.container.form__wrapper{
+	max-width: 1375px;
+	width: 1375px;
+}
+
+.form__title{
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 46px;
+	margin-bottom: 5px;
+}
+.form__text{
+	max-width: 462px;
+	font-size: 20px;
+	line-height: 30px;
+	margin-bottom: 40px;
+}
+.form--catalog{
+	display: flex;
+	align-items: center;
+}
+.form-item{
+	input{
+		width: 170px;
+		min-height: 60px;
+		color: #000000;
+		font-size: 16px;
+		line-height: 34px;
+		border-radius: 30px;
+		text-align: center;
+		margin-right: 30px;
+		&[type = 'email']{
+			width: 270px;
+		}
 	}
 }
