--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,3 +8,4 @@
 @import "blocks/slider.scss";
 @import "blocks/products.scss";
 @import "blocks/form__catalog.scss";
+@import "blocks/services.scss";
