--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,4 @@
 @import "blocks/products.scss";
 @import "blocks/form__catalog.scss";
 @import "blocks/services.scss";
+@import "blocks/reviews.scss";
