--- a/src/scss/blocks/btn.scss
+++ b/src/scss/blocks/btn.scss
@@ -26,6 +26,7 @@
 	color: white;
 	background: linear-gradient(to bottom, #f7a748 0%, #e28413 100%);
 	box-shadow: 0px 3px 9px 0 #ae4e0e;
+	min-height: 60px;
 }
 .btn--light-green{
 	color: black;
@@ -38,14 +39,16 @@
 }
 .btn--prise{
 	width: 270px;
-	height: 60px;
 	color: white;
 	font-size: 12px;
 	font-weight: 500;
 	text-transform: uppercase;
 }
 .btn--form{
-	height: 60px;
 	width: 100%;
 	max-width: 370px;
+}
+.btn--order{
+	min-width: 270px;
+	
 }
