--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,3 +10,4 @@
 @import "blocks/form__catalog.scss";
 @import "blocks/services.scss";
 @import "blocks/reviews.scss";
+@import "blocks/order.scss";
