--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,3 +11,5 @@
 @import "blocks/services.scss";
 @import "blocks/reviews.scss";
 @import "blocks/order.scss";
+@import "blocks/сontacts.scss";
+@import "blocks/map.scss";
