--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,6 @@
 @import "blocks/сontacts.scss";
 @import "blocks/map.scss";
 @import "blocks/footer.scss";
+@import "blocks/modal.scss";
+@import "blocks/modal--thank-window.scss";
+@import "blocks/modal--form.scss";
