--- a/src/scss/blocks/benefit.scss
+++ b/src/scss/blocks/benefit.scss
@@ -41,12 +41,18 @@
 		background-color: #cf3d5a;
 		}
 	}
+	&:hover{
+		.benefit__img{
+			
+			width: 270px;
+			height: 270px;
+		}
+	}
 }
 .benefit__img__wrapper{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	
 	width: 320px;
 	height: 320px;
 	border-radius: 50%;
@@ -54,6 +60,7 @@
 	margin-bottom: 48px;
 }
 .benefit__img{
+	transition: 1s;
 	display: flex;
 	justify-content: center;
 	align-items: center;
