--- a/src/scss/blocks/products.scss
+++ b/src/scss/blocks/products.scss
@@ -115,6 +115,17 @@
 		background-color: inherit;
 		cursor: pointer;
 		background-image: url(../img/products/btn--orange.svg);
+		transition: 1s;
+		&:hover{
+			opacity: 0.7;
+			transform: scale(0.9);
+		}
+		&:active{
+			transform: scale(0.9) translateX(-49px);
+		}
+		&:focus{
+			outline: none;
+		}
 	}
 	&:nth-child(2){
 		.basic__img{
@@ -163,6 +174,9 @@
 			right: auto;
 			left: 0;
 			background-image: url(../img/products/btn--burgundy.svg);
+			&:active{
+				transform: scale(0.9) translateX(49px);
+			}
 		}
 	}
 }
