--- a/src/scss/blocks/reviews.scss
+++ b/src/scss/blocks/reviews.scss
@@ -43,6 +43,9 @@
 		left: 0;
 		margin-top: 30px;
 		margin-left: -85px;
+		&:hover{
+			opacity: 0.5;
+		}
 	}
 	&::after{
 		transform: rotate(180deg);
@@ -112,6 +115,7 @@
 	
 	.form_radio {
 		margin-bottom: 14px;
+
 		&:not(:last-child){
 			margin-right: 15px;
 		}
@@ -170,6 +174,16 @@
 	background-image: url(/img/products/btn--burgundy.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
+	transition: 1s;
+	&:hover{
+		opacity: 0.7;
+	}
+	&:active{
+		transform: scale(0.9);
+	}
+	&:focus{
+		outline: none;
+	}
 }
 .btn--prev{
 	background-image: url(/img/products/btn--orange.svg);
